# getapi

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
docs/: generate.py
docs/assets/: style.css
docs/templates/: 404.html  base.html  index.html  provider.html
homebrew/: getapi.rb
npm/getapi-cli/: package.json
npm/getapi-cli-darwin-arm64/: package.json
npm/getapi-cli-darwin-x64/: package.json
npm/getapi-cli-linux-arm64/: package.json
npm/getapi-cli-linux-x64/: package.json
npm/getapi-cli-win32-x64/: package.json
providers/: anthropic.json  auth0.json  clerk.json  cloudflare.json  discord.json  firebase.json  github.json  google-maps.json  index.json  notion.json  openai.json  resend.json  sendgrid.json  shopify.json  slack.json  spotify.json  stripe.json  supabase.json  telegram.json  twilio.json  twitter.json  vercel.json
scripts/: generate-index.sh
src/: error.rs  main.rs  ui.rs
src/cli/: args.rs
src/manifest/: loader.rs  types.rs
src/output/: env.rs  json.rs  mod.rs  stdout.rs
src/recipe/: loader.rs  mod.rs  registry.rs  remote.rs  template.rs  types.rs
src/runner/: context.rs  mod.rs
src/runner/steps/: copy_clipboard.rs  info.rs  mod.rs  open_url.rs  output.rs  prompt_choice.rs  prompt_confirm.rs  prompt_input.rs  run_command.rs  validate.rs  wait.rs
src/session/: store.rs  types.rs
src/validators/: http_get.rs  mod.rs  oauth2.rs
